# Omni-IP

./: .gitmodules  LEGAL.md  Native_Hardening_Roadmap.md  OMNI_IP_MARKETING_PROTOCOL.md  RC0_Final_Audit.md  RC1_Final_Audit.md  RC2_Optimization_And_Readiness_Report.md  RC3_Final_SignOff_Report.md  RC4_Final_Production_SignOff.md  RC5_Final_System_Scorecard.md  RC6_Final_System_Scorecard.md  README.md  RELEASE_ARTIFACTS.md  ROADMAP.md  audit_report.txt  build.gradle.kts  extract_main.py  extracted.txt  fix.py  fix_main2.py  gap_analysis_report.md  pcap_failure_hypothesis.txt  protocol_hardcoding_map.txt  remediation_blueprint.txt  report.md  search_transcript.py  settings.gradle.kts  telemetry_schema_gap_analysis.txt  test_plan.sh  write_main.py
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/docs/: DataHandling.md  PrivacyPolicy.md  VpnServiceDisclosure.md
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.cpp.orig  edr_proxy.cpp  sha256.cpp  sha256.h
app/src/main/cpp/lwip_port/: lwipopts.h
app/src/main/cpp/lwip_port/arch/: cc.h  sys_arch.h
app/src/main/java/com/mobisec/omniip/: DocumentViewerActivity.kt  MainActivity.kt  SplashActivity.kt
app/src/main/java/com/mobisec/omniip/billing/: BillingManager.kt
app/src/main/java/com/mobisec/omniip/core/: BootReceiver.kt  DnsResolver.kt  ExportEngine.kt  (+7 more)
app/src/main/res/drawable/: ic_firewall_block.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_recon_crosshair.xml  ic_status_alert.xml  ic_tactical_terminal.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+59 files in other folders)
